Fix css for boot log when errors cause horizontal scrolling.

--- a/dna/default/public/TIBET-INF/boot/styles/tibet_boot.css
+++ b/dna/default/public/TIBET-INF/boot/styles/tibet_boot.css
@@ -122,6 +122,14 @@ body.showlog #BOOT-CONSOLE {
 
     overflow: hidden;
     overflow-x: auto;
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: auto;
+    height: auto;
 }
 
 #BOOT-LOG * {
